--- a/main.html
+++ b/main.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
+	<!-- Navigation Bar -->
+	<nav>
+		<ul>
+			<li><a href="#audio1">Audio 1</a></li>
+			<li><a href="#audio2">Audio 2</a></li>
+			<li><a href="#audio3">Audio 3</a></li>
+		</ul>
+	</nav>
+
+	<!-- Audio Section -->
 	<section>
-    <h2>3 random audios</h2>
-    <audio controls>
-        <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-    </audio>
-    <audio controls>
-        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-    </audio>
-    <audio controls>
-        <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
-    </audio>
-</section>
-    <script type="text/javascript" src="./script.js">
-</script>
+		<h2>3 random audios</h2>
+		<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+		</audio>
+		<audio controls>
+			<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+		</audio>
+		<audio controls>
+			<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+		</audio>
+	</section>
 
+	<script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
